[package]
name = "cli-task-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
comfy-table = "7.1.1"
crossterm = "0.28.1"
ratatui = "0.28.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
shlex = "1.3.0"
sysinfo = "0.31.4"
tui = "0.19.0"
uuid = { version = "1.10.0", features = ["v4"] }
